[package]
name = "teleprint"
version = "0.1.0"
authors = ["thomasfire <thomasfire@yandex.ru>"]

[dependencies]
telebot = { git = "https://github.com/bytesnake/telebot", branch = "master" }
tokio-core = "0.1"
failure = "0.1.3"
futures = "0.1"
toml = "0.4"
serde_derive = "1.0.*"
serde = "1.0.*"
reqwest = "0.9.5"
sha1 = "0.6.0"