[package]
name = "teleprint"
version = "0.1.2"
authors = ["thomasfire <thomasfire@yandex.ru>"]

[dependencies]
telebot = { git = "https://github.com/bytesnake/telebot", branch = "master" }
tokio-core = "0.1"
futures = "0.1"
toml = "0.4"
serde_derive = "1.0.*"
serde = "1.0.*"
reqwest = "0.9.*"
sha1 = "0.6.*"
imap = "0.9.*"
native-tls = "0.2.*"
mailparse = "0.6.*"
rand = "0.6.*"